--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22.1)
 
-project(assimp2c)
+project(assimp2h)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -19,6 +19,6 @@ set(SOURCES
     src/writer.h
 )
 
-add_executable(assimp2c ${SOURCES})
+add_executable(assimp2h ${SOURCES})
 
-target_link_libraries(assimp2c PRIVATE fmt::fmt assimp::assimp gflags::gflags)
+target_link_libraries(assimp2h PRIVATE fmt::fmt assimp::assimp gflags::gflags)
